--- a/solo/index.html
+++ b/solo/index.html
@@ -348,10 +348,13 @@
             }
 
             .loyalty-card-icon {
-                bottom: 3px;
+                bottom: 0.25vh;
+                bottom: 0.25dvh;
                 transform: scale(0.8);
                 transform-origin: bottom right;
-                position:absolute;
+                position: absolute;
+                height: 5vh;
+                height: 5dvh;
             }
 
             .expl {
